--- a/fiori-app-inTake/inTake/webapp/index.html
+++ b/fiori-app-inTake/inTake/webapp/index.html
@@ -14,7 +14,7 @@
 		<!--data-sap-ui-theme="sap_belize""sap_belize_plus" "sap_fiori_3"-->
 		<script id="sap-ui-bootstrap"
 			src="https://sapui5.hana.ondemand.com/1.108.21/resources/sap-ui-core.js"
-			data-sap-ui-theme="sap_belize"
+			data-sap-ui-theme="sap_horizon"
 			data-sap-ui-resourceroots='{"com.9b.inTake": "./"}'
 			data-sap-ui-compatVersion="edge"
 			data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
